--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -139,10 +139,12 @@ layout: default
 
         <!-- Series Toggle Button -->
         {% if page.series %}
+        {% assign series_total = site.posts | where: "series", page.series | size %}
+        {% assign series_current = page.series_order | default: 1 %}
         <button class="sidebar-toggle series-toggle" aria-label="Toggle Series Navigation" aria-expanded="false" title="Series Navigation (S)">
             <i class="fas fa-book-open"></i>
             <span class="toggle-label">Series</span>
-            <span class="series-badge">{{ page.series_order }}/{{ site.posts | where: "series", page.series | size }}</span>
+            <span class="series-badge">{{ series_current }}/{{ series_total }}</span>
         </button>
         {% endif %}
 
@@ -177,13 +179,15 @@ layout: default
                 
                 <div class="series-progress">
                     {% assign total_series_posts = site.posts | where: "series", page.series | size %}
+                    {% assign current_order = page.series_order | default: 1 %}
                     <div class="progress-label">
                         <span>Series Progress</span>
-                        <span class="progress-text">{{ page.series_order }}/{{ total_series_posts }}</span>
+                        <span class="progress-text">{{ current_order }}/{{ total_series_posts }}</span>
                     </div>
                     <div class="progress-bar-bg">
-                        {% if total_series_posts > 0 %}
-                        <div class="progress-bar-fill" data-progress="{{ page.series_order | times: 100 | divided_by: total_series_posts }}"></div>
+                        {% if total_series_posts > 0 and current_order %}
+                        {% assign progress_percent = current_order | times: 100 | divided_by: total_series_posts %}
+                        <div class="progress-bar-fill" data-progress="{{ progress_percent }}"></div>
                         {% else %}
                         <div class="progress-bar-fill" data-progress="0"></div>
                         {% endif %}
