--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -131,25 +131,13 @@ layout: default
     </header>
 </article>
 
-<!-- TOC Toggle Button (Outside article for proper stacking context) -->
-<button class="sidebar-toggle toc-toggle" aria-label="Toggle Table of Contents" aria-expanded="false" title="Table of Contents (T)">
-    <i class="fas fa-list"></i>
-    <span class="toggle-label">TOC</span>
-</button>
-
-<!-- Series Toggle Button -->
-{% if page.series %}
-{% assign series_total = site.posts | where: "series", page.series | size %}
-{% assign series_current = page.series_order | default: 1 %}
-<button class="sidebar-toggle series-toggle" aria-label="Toggle Series Navigation" aria-expanded="false" title="Series Navigation (S)">
-    <i class="fas fa-book-open"></i>
-    <span class="toggle-label">Series</span>
-    <span class="series-badge">{{ series_current }}/{{ series_total }}</span>
-</button>
-{% endif %}
-
 <!-- Left Sidebar: Table of Contents (Collapsible) -->
 <aside class="toc-sidebar collapsed" id="tocSidebar" aria-hidden="true">
+    <!-- TOC Tab (Bookmark style) -->
+    <button class="sidebar-tab toc-tab" aria-label="Toggle Table of Contents" title="Table of Contents (T)">
+        <span class="tab-text">TOC</span>
+        <i class="fas fa-list tab-icon"></i>
+    </button>
             <div class="sidebar-header">
                 <h3><i class="fas fa-list"></i> Table of Contents</h3>
                 <button class="sidebar-close" aria-label="Close TOC">
