--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -877,11 +877,11 @@
 
 /* Hover states that maintain positioning */
 .toc-sidebar:not(.expanded) .toc-tab:hover {
-    transform: translateX(calc(300px + 50px)) translateY(-50%) scale(1.05);
+    transform: translateX(calc(var(--sidebar-width) + 50px)) translateY(-50%) scale(1.05);
 }
 
 .series-sidebar:not(.expanded) .series-tab:hover {
-    transform: translateX(calc(-300px - 50px)) translateY(-50%) scale(1.05);
+    transform: translateX(calc(-1 * (var(--sidebar-width) + 50px))) translateY(-50%) scale(1.05);
 }
 
 .sidebar-tab .tab-text {
@@ -1085,11 +1085,11 @@
 
 /* Tabs positioning - keep visible when sidebar is collapsed */
 .toc-sidebar:not(.expanded) .toc-tab {
-    transform: translateX(calc(300px + 50px)) translateY(-50%);
+    transform: translateX(calc(var(--sidebar-width) + 50px)) translateY(-50%);
 }
 
 .series-sidebar:not(.expanded) .series-tab {
-    transform: translateX(calc(-300px - 50px)) translateY(-50%);
+    transform: translateX(calc(-1 * (var(--sidebar-width) + 50px))) translateY(-50%);
 }
 
 /* Hide tabs when sidebar is expanded */
