--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -222,13 +222,14 @@ layout: default
                             {% assign current_index = forloop.index0 %}
                         {% endif %}
                     {% endfor %}
+                    {% assign last_index = total_parts | minus: 1 %}
                     {% if current_index != nil and current_index > 0 %}
                         {% assign prev_post = series_posts[current_index | minus: 1] %}
                         <a href="{{ prev_post.url | relative_url }}" class="quick-nav-btn prev">
                             <i class="fas fa-chevron-left"></i> Previous
                         </a>
                     {% endif %}
-                    {% if current_index != nil and current_index < total_parts | minus: 1 %}
+                    {% if current_index != nil and current_index < last_index %}
                         {% assign next_post = series_posts[current_index | plus: 1] %}
                         <a href="{{ next_post.url | relative_url }}" class="quick-nav-btn next">
                             Next <i class="fas fa-chevron-right"></i>
